work for zeek v4.1.1, see idaholab/Malcolm#59

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3519,28 +3519,17 @@ filter {
 
     if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
 
-      # bitmap x509.log field configuration version 0
-      # zeek 4.1.x added host_cert, client_cert
-      #
-      # pre-v4.1.x x509.log without host_cert, client_cert : 0x000FFFFF / 1048575
-      #     v4.1.x x509.log with    host_cert, client_cert : 0x003FFFFF / 4194303
-
       if ([@metadata][zeek_fields_bitmap_version] == 0) {
 
-        if ([@metadata][zeek_fields_bitmap] == 4194303) {
+        # bitmap x509.log field configuration version 0
+        # zeek 4.1.x added host_cert, client_cert
+        #
+        # pre-v4.1.x x509.log without host_cert, client_cert : 0x000FFFFF / 1048575
+
+        if ([@metadata][zeek_fields_bitmap] == 1048575) {
 
           dissect {
-            id => "dissect_zeek_x509_v410"
-            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-            mapping => {
-              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}	%{[zeek_cols][host_cert]}	%{[zeek_cols][client_cert]}"
-            }
-          }
-
-        } else if ([@metadata][zeek_fields_bitmap] == 1048575) {
-
-          dissect {
-            id => "dissect_zeek_x509_pre_v410"
+            id => "dissect_zeek_x509_v0"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
               "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}"
@@ -3549,7 +3538,30 @@ filter {
 
         } else {
           # who knows? the x509.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
-          mutate { id => "mutate_add_tag_dissect_failure_unknown_x509_bitmap"
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_x509_bitmap_v0"
+                   add_tag => [ "_dissectfailure" ] }
+        }
+
+      } else if ([@metadata][zeek_fields_bitmap_version] == 1) {
+
+        # bitmap x509.log field configuration version 0
+        # zeek 4.1.x added host_cert, client_cert
+        #
+        # v4.1.x+ x509.log with host_cert, client_cert : 0x0003FFFFF / 4194303
+
+        if ([@metadata][zeek_fields_bitmap] == 4194303) {
+
+          dissect {
+            id => "dissect_zeek_x509_v1"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fingerprint]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}	%{[zeek_cols][host_cert]}	%{[zeek_cols][client_cert]}"
+            }
+          }
+
+        } else {
+          # who knows? the x509.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_x509_bitmap_v1"
                    add_tag => [ "_dissectfailure" ] }
         }
 
