work for zeek v4.1.1, see idaholab/Malcolm#59

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5044,6 +5044,22 @@ filter {
     if ([zeek_ssl][client_cert_chain_fuids]) { mutate { id => "mutate_split_zeek_ssl_client_cert_chain_fuids"
                                                         split => { "[zeek_ssl][client_cert_chain_fuids]" => "," } } }
 
+    if ([zeek_ssl][cert_chain_fps]) {
+      mutate { id => "mutate_split_zeek_ssl_cert_chain_fps"
+               split => { "[zeek_ssl][cert_chain_fps]" => "," } }
+      # store certificate chain fingerprints in zeek_x509.fingerprint as well for cross-reference with x509.log
+      mutate { id => "mutate_merge_zeek_ssl_cert_chain_fps"
+               merge => { "[zeek_x509][fingerprint]" => "[zeek_ssl][cert_chain_fps]" } }
+    }
+
+    if ([zeek_ssl][client_cert_chain_fps]) {
+      mutate { id => "mutate_split_zeek_ssl_client_cert_chain_fps"
+               split => { "[zeek_ssl][client_cert_chain_fps]" => "," } }
+      # store certificate chain fingerprints in zeek_x509.fingerprint as well for cross-reference with x509.log
+      mutate { id => "mutate_merge_zeek_ssl_client_cert_chain_fps"
+               merge => { "[zeek_x509][fingerprint]" => "[zeek_ssl][client_cert_chain_fps]" } }
+    }
+
   } else if ([log_source] == "tds_rpc") {
     #############################################################################################################################
     # tds_rpc.log specific logic
@@ -5171,6 +5187,8 @@ filter {
     if ([zeek_x509][san_ip]) { mutate { id => "mutate_split_zeek_x509_san_ip"
                                         split => { "[zeek_x509][san_ip]" => "," } } }
 
+    if ([zeek_x509][fingerprint]) { mutate { id => "mutate_split_zeek_x509_fingerprint"
+                                             split => { "[zeek_x509][fingerprint]" => "," } } }
 
   } # end if/else if/else for specific log type logic
   #######################################################################################################
