work for zeek v4.1.1, see idaholab/Malcolm#59; support OCSP and STUN

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -711,6 +711,18 @@ zeek_ntp.rec_time=db:zeek_ntp.rec_time;kind:termfield;friendly:Receive Timestamp
 zeek_ntp.xmt_time=db:zeek_ntp.xmt_time;kind:termfield;friendly:Transmit Timestamp;help:Transmit Timestamp
 zeek_ntp.num_exts=db:zeek_ntp.num_exts;kind:integer;friendly:Extension Fields;help:Extension Fields
 
+# ocsp.log
+# https://docs.zeek.org/en/stable/scripts/policy/files/x509/log-ocsp.zeek.html#type-OCSP::Info
+zeek_ocsp.hashAlgorithm=db:zeek_ocsp.hashAlgorithm;kind:termfield;friendly:Issuer Name and Key Hash Algorithm;help:Issuer Name and Key Hash Algorithm
+zeek_ocsp.issuerNameHash=db:zeek_ocsp.issuerNameHash;kind:termfield;friendly:Issuer Name Hash;help:Issuer Name Hash
+zeek_ocsp.issuerKeyHash=db:zeek_ocsp.issuerKeyHash;kind:termfield;friendly:Issuer Key Hash;help:Issuer Key Hash
+zeek_ocsp.serialNumber=db:zeek_ocsp.serialNumber;kind:termfield;friendly:Certificate Serial Number;help:Certificate Serial Number
+zeek_ocsp.certStatus=db:zeek_ocsp.certStatus;kind:termfield;friendly:Certificate Status;help:Certificate Status
+zeek_ocsp.revoketime=db:zeek_ocsp.revoketime;kind:termfield;friendly:Time Revoked;help:Time Revoked
+zeek_ocsp.revokereason=db:zeek_ocsp.revokereason;kind:termfield;friendly:Reason Revoked;help:Reason Revoked
+zeek_ocsp.thisUpdate=db:zeek_ocsp.thisUpdate;kind:termfield;friendly:Update Time;help:Update Time
+zeek_ocsp.nextUpdate=db:zeek_ocsp.nextUpdate;kind:termfield;friendly:Next Update Time;help:Next Update Time
+
 # pe.log
 # https://docs.zeek.org/en/stable/scripts/base/files/pe/main.zeek.html#type-PE::Info
 zeek_pe.machine=db:zeek_pe.machine;kind:termfield;friendly:Target Machine;help:Target Machine
@@ -1039,6 +1051,20 @@ zeek_ssl.ja3s=db:zeek_ssl.ja3s;kind:termfield;friendly:JA3S Fingerprint;help:JA3
 zeek_ssl.ja3_desc=db:zeek_ssl.ja3_desc;kind:termfield;friendly:JA3 Fingerprint Lookup;help:JA3 Fingerprint Lookup
 zeek_ssl.ja3s_desc=db:zeek_ssl.ja3s_desc;kind:termfield;friendly:JA3S Fingerprint Lookup;help:JA3S Fingerprint Lookup
 
+
+# stun.log and stun_nat.log
+# https://github.com/zeek/spicy-analyzers/tree/main/analyzer/stun
+zeek_stun.is_orig=db:zeek_stun.is_orig;kind:termfield;friendly:Is Originator;help:Is Originator
+zeek_stun.trans_id=db:zeek_stun.trans_id;kind:termfield;friendly:Transaction ID;help:Transaction ID
+zeek_stun.method=db:zeek_stun.method;kind:termfield;friendly:STUN Method;help:STUN Method
+zeek_stun.class=db:zeek_stun.class;kind:termfield;friendly:STUN Class;help:STUN Class
+zeek_stun.attr_type=db:zeek_stun.attr_type;kind:termfield;friendly:Attribute Type;help:Attribute Type
+zeek_stun.attr_val=db:zeek_stun.attr_val;kind:termfield;friendly:Attribute Value;help:Attribute Value
+zeek_stun_nat.is_orig=db:zeek_stun_nat.is_orig;kind:termfield;friendly:Is Originator;help:Is Originator
+zeek_stun_nat.wan_addr=db:zeek_stun_nat.wan_addr;kind:termfield;friendly:WAN Address;help:WAN Address
+zeek_stun_nat.wan_port=db:zeek_stun_nat.wan_port;kind:integer;friendly:Mapped Port;help:Mapped Port
+zeek_stun_nat.lan_addr=db:zeek_stun_nat.lan_addr;kind:termfield;friendly:NAT LAN Address;help:NAT LAN Address
+
 # syslog.log
 # https://docs.zeek.org/en/stable/scripts/base/protocols/syslog/main.zeek.html#type-Syslog::Info
 zeek_syslog.facility=db:zeek_syslog.facility;kind:termfield;friendly:Facility;help:Facility
@@ -1202,6 +1228,7 @@ zeek_mysql=require:zeek_mysql;title:Zeek mysql.log;fields:zeek_mysql.cmd,zeek_my
 zeek_notice=require:zeek_notice;title:Zeek notice.log;fields:zeek_notice.file_mime_type,zeek_notice.file_desc,zeek_notice.note,zeek_notice.msg,zeek_notice.sub,zeek_notice.src,zeek_notice.dst,zeek_notice.p,zeek_notice.n,zeek_notice.peer_descr,zeek_notice.actions,zeek_notice.suppress_for,zeek_notice.dropped,zeek_notice.remote_location_country_code,zeek_notice.remote_location_region,zeek_notice.remote_location_latitude,zeek_notice.remote_location_longitude,zeek_notice.category,zeek_notice.sub_category
 zeek_ntlm=require:zeek_ntlm;title:Zeek ntlm.log;fields:zeek_ntlm.host,zeek_ntlm.domain,zeek_ntlm.success,zeek_ntlm.status,zeek_ntlm.server_nb_computer,zeek_ntlm.server_dns_computer,zeek_ntlm.server_tree
 zeek_ntp=require:zeek_ntp;title:Zeek ntp.log;fields:zeek_ntp.version,zeek_ntp.mode,zeek_ntp.mode_str,zeek_ntp.stratum,zeek_ntp.poll,zeek_ntp.precision,zeek_ntp.root_delay,zeek_ntp.root_disp,zeek_ntp.ref_id,zeek_ntp.ref_time,zeek_ntp.org_time,zeek_ntp.rec_time,zeek_ntp.xmt_time,zeek_ntp.num_exts
+zeek_ocsp=require:zeek_ocsp;title:Zeek ocsp.log;fields:zeek_ocsp.hashAlgorithm,zeek_ocsp.issuerNameHash,zeek_ocsp.issuerKeyHash,zeek_ocsp.serialNumber,zeek_ocsp.certStatus,zeek_ocsp.revoketime,zeek_ocsp.revokereason,zeek_ocsp.thisUpdate,zeek_ocsp.nextUpdate
 zeek_pe=require:zeek_pe;title:Zeek pe.log;fields:zeek_pe.machine,zeek_pe.compile_ts,zeek_pe.os,zeek_pe.subsystem,zeek_pe.is_exe,zeek_pe.is_64bit,zeek_pe.uses_aslr,zeek_pe.uses_dep,zeek_pe.uses_code_integrity,zeek_pe.uses_seh,zeek_pe.has_import_table,zeek_pe.has_export_table,zeek_pe.has_cert_table,zeek_pe.has_debug_data,zeek_pe.section_names
 zeek_profinet=require:zeek_profinet;title:Zeek profinet.log;fields:zeek_profinet.operation_type,zeek_profinet.block_version,zeek_profinet.slot_number,zeek_profinet.subslot_number,zeek_profinet.index
 zeek_profinet_dce_rpc=require:zeek_profinet_dce_rpc;title:Zeek profinet_dce_rpc.log;fields:zeek_profinet_dce_rpc.version,zeek_profinet_dce_rpc.packet_type,zeek_profinet_dce_rpc.object_uuid,zeek_profinet_dce_rpc.interface_uuid,zeek_profinet_dce_rpc.activity_uuid,zeek_profinet_dce_rpc.server_boot_time,zeek_profinet_dce_rpc.operation
@@ -1220,6 +1247,8 @@ zeek_socks=require:zeek_socks;title:Zeek socks.log;fields:zeek_socks.version,zee
 zeek_software=require:zeek_software;title:Zeek software.log;fields:zeek_software.software_type,zeek_software.name,zeek_software.version_major,zeek_software.version_minor,zeek_software.version_minor2,zeek_software.version_minor3,zeek_software.version_addl,zeek_software.unparsed_version
 zeek_ssh=require:zeek_ssh;title:Zeek ssh.log;fields:zeek_ssh.version,zeek_ssh.auth_success,zeek_ssh.auth_attempts,zeek_ssh.direction,zeek_ssh.client,zeek_ssh.server,zeek_ssh.cipher_alg,zeek_ssh.mac_alg,zeek_ssh.compression_alg,zeek_ssh.kex_alg,zeek_ssh.host_key_alg,zeek_ssh.host_key,zeek_ssh.remote_location_country_code,zeek_ssh.remote_location_region,zeek_ssh.remote_location_city,zeek_ssh.remote_location_latitude,zeek_ssh.remote_location_longitude,zeek_ssh.hassh,zeek_ssh.hasshServer,zeek_ssh.hasshAlgorithms,zeek_ssh.hasshServerAlgorithms,zeek_ssh.cshka,zeek_ssh.sshka
 zeek_ssl=require:zeek_ssl;title:Zeek ssl.log;fields:zeek_ssl.ssl_version,zeek_ssl.ssl_history,zeek_ssl.sni_matches_cert,zeek_ssl.cipher,zeek_ssl.curve,zeek_ssl.server_name,zeek_ssl.resumed,zeek_ssl.last_alert,zeek_ssl.next_protocol,zeek_ssl.established,zeek_ssl.ja3,zeek_ssl.ja3_desc,zeek_ssl.ja3s,zeek_ssl.ja3s_desc,zeek_ssl.cert_chain_fuids,zeek_ssl.cert_chain_fps,zeek_ssl.client_cert_chain_fuids,zeek_ssl.client_cert_chain_fps,zeek_ssl.subject.CN,zeek_ssl.subject.C,zeek_ssl.subject.O,zeek_ssl.subject.OU,zeek_ssl.subject.ST,zeek_ssl.subject.SN,zeek_ssl.subject.L,zeek_ssl.subject.GN,zeek_ssl.subject.pseudonym,zeek_ssl.subject.serialNumber,zeek_ssl.subject.title,zeek_ssl.subject.initials,zeek_ssl.subject.emailAddress,zeek_ssl.subject.description,zeek_ssl.subject.postalCode,zeek_ssl.subject.street,zeek_ssl.client_subject.CN,zeek_ssl.client_subject.C,zeek_ssl.client_subject.O,zeek_ssl.client_subject.OU,zeek_ssl.client_subject.ST,zeek_ssl.client_subject.SN,zeek_ssl.client_subject.L,zeek_ssl.client_subject.GN,zeek_ssl.client_subject.pseudonym,zeek_ssl.client_subject.serialNumber,zeek_ssl.client_subject.title,zeek_ssl.client_subject.initials,zeek_ssl.client_subject.emailAddress,zeek_ssl.issuer.CN,zeek_ssl.issuer.C,zeek_ssl.issuer.O,zeek_ssl.issuer.OU,zeek_ssl.issuer.ST,zeek_ssl.issuer.SN,zeek_ssl.issuer.L,zeek_ssl.issuer.DC,zeek_ssl.issuer.GN,zeek_ssl.issuer.pseudonym,zeek_ssl.issuer.serialNumber,zeek_ssl.issuer.title,zeek_ssl.issuer.initials,zeek_ssl.issuer.emailAddress,zeek_ssl.client_issuer.CN,zeek_ssl.client_issuer.C,zeek_ssl.client_issuer.O,zeek_ssl.client_issuer.OU,zeek_ssl.client_issuer.ST,zeek_ssl.client_issuer.SN,zeek_ssl.client_issuer.L,zeek_ssl.client_issuer.DC,zeek_ssl.client_issuer.GN,zeek_ssl.client_issuer.pseudonym,zeek_ssl.client_issuer.serialNumber,zeek_ssl.client_issuer.title,zeek_ssl.client_issuer.initials,zeek_ssl.client_issuer.emailAddress,zeek_ssl.validation_status
+zeek_stun=require:zeek_stun;title:Zeek stun.log;fields:zeek_stun.is_orig,zeek_stun.trans_id,zeek_stun.method,zeek_stun.class,zeek_stun.attr_type,zeek_stun.attr_val
+zeek_stun_nat=require:zeek_stun_nat;title:Zeek stun_nat.log;fields:zeek_stun_nat.is_orig,zeek_stun_nat.wan_addr,zeek_stun_nat.wan_port,zeek_stun_nat.lan_addr
 zeek_syslog=require:zeek_syslog;title:Zeek syslog.log;fields:zeek_syslog.facility,zeek_syslog.severity,zeek_syslog.message
 zeek_tds=require:zeek_tds;title:Zeek tds.log;fields:zeek_tds.command
 zeek_tds_rpc=require:zeek_tds_rpc;title:Zeek tds_rpc.log;fields:zeek_tds_rpc.procedure_name,zeek_tds_rpc.parameters
