--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2493,6 +2493,32 @@ filter {
       }
     }
 
+  } else if ([log_source] == "ocsp") {
+    #############################################################################################################################
+    # ocsp.log
+    # https://docs.zeek.org/en/stable/scripts/policy/files/x509/log-ocsp.zeek.html#type-OCSP::Info
+
+    dissect {
+      id => "dissect_zeek_ocsp"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][hashAlgorithm]}	%{[zeek_cols][issuerNameHash]}	%{[zeek_cols][issuerKeyHash]}	%{[zeek_cols][serialNumber]}	%{[zeek_cols][certStatus]}	%{[zeek_cols][revoketime]}	%{[zeek_cols][revokereason]}	%{[zeek_cols][thisUpdate]}	%{[zeek_cols][nextUpdate]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ocsp"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+
+      ruby {
+        id => "ruby_zip_zeek_ocsp"
+        init => "$zeek_ocsp_field_names = [ 'ts', 'fuid', 'hashAlgorithm', 'issuerNameHash', 'issuerKeyHash', 'serialNumber', 'certStatus', 'revoketime', 'revokereason', 'thisUpdate', 'nextUpdate' ]"
+        code => "event.set('[zeek_cols]', $zeek_ocsp_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
   } else if ([log_source] == "pe") {
     #############################################################################################################################
     # pe.log
@@ -3283,6 +3309,56 @@ filter {
       add_field => {
         "[zeek_cols][proto]" => "tcp"
         "[zeek_cols][service]" => "tls"
+      }
+    }
+
+  } else if ([log_source] == "stun") {
+    #############################################################################################################################
+    # stun.log
+    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/stun
+
+    dissect {
+      id => "dissect_zeek_stun"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][is_orig]}	%{[zeek_cols][trans_id]}	%{[zeek_cols][method]}	%{[zeek_cols][class]}	%{[zeek_cols][attr_type]}	%{[zeek_cols][attr_val]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_stun"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_stun"
+        init => "$zeek_stun_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'is_orig', 'trans_id', 'method', 'class', 'attr_type', 'attr_val' ]"
+        code => "event.set('[zeek_cols]', $zeek_stun_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+  } else if ([log_source] == "stun_nat") {
+    #############################################################################################################################
+    # stun.log
+    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/stun
+
+    dissect {
+      id => "dissect_zeek_stun_nat"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][is_orig]}	%{[zeek_cols][wan_addr]}	%{[zeek_cols][wan_port]}	%{[zeek_cols][lan_addr]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_stun_nat"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => " " }
+      }
+      ruby {
+        id => "ruby_zip_zeek_stun_nat"
+        init => "$zeek_stun_nat_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'is_orig', 'wan_addr', 'wan_port', 'lan_addr' ]"
+        code => "event.set('[zeek_cols]', $zeek_stun_nat_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
