--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -89,6 +89,7 @@ filter {
       "[zeek_smb_files][data_len_req]" => "integer"
       "[zeek_smb_files][data_len_rsp]" => "integer"
       "[zeek_smb_files][data_offset_req]" => "integer"
+      "[zeek_stun_nat][wan_port]" => "integer"
       "[zeek_tftp][size]" => "integer"
       "[zeek_tftp][block_sent]" => "integer"
       "[zeek_tftp][block_acked]" => "integer"
@@ -175,6 +176,45 @@ filter {
         id => "date_zeek_ntp_xmt_time"
         match => [ "[zeek_ntp][xmt_time]", "UNIX" ]
         target => "[zeek_ntp][xmt_time]"
+      }
+    }
+  }
+
+  if ([zeek_ocsp][revoketime]) {
+    if ([zeek_ocsp][revoketime] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_ocsp_revoketime_zero"
+               remove_field => [ "[zeek_ocsp][revoketime]" ] }
+    } else {
+      date {
+        id => "date_zeek_ocsp_revoketime"
+        match => [ "[zeek_ocsp][revoketime]", "UNIX" ]
+        target => "[zeek_ocsp][revoketime]"
+      }
+    }
+  }
+
+  if ([zeek_ocsp][thisUpdate]) {
+    if ([zeek_ocsp][thisUpdate] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_ocsp_thisUpdate_zero"
+               remove_field => [ "[zeek_ocsp][thisUpdate]" ] }
+    } else {
+      date {
+        id => "date_zeek_ocsp_thisUpdate"
+        match => [ "[zeek_ocsp][thisUpdate]", "UNIX" ]
+        target => "[zeek_ocsp][thisUpdate]"
+      }
+    }
+  }
+
+  if ([zeek_ocsp][nextUpdate]) {
+    if ([zeek_ocsp][nextUpdate] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_ocsp_nextUpdate_zero"
+               remove_field => [ "[zeek_ocsp][nextUpdate]" ] }
+    } else {
+      date {
+        id => "date_zeek_ocsp_nextUpdate"
+        match => [ "[zeek_ocsp][nextUpdate]", "UNIX" ]
+        target => "[zeek_ocsp][nextUpdate]"
       }
     }
   }
