work for zeek v4.1.1, see idaholab/Malcolm#59; more work on new ocsp/stun

--- a/logstash/maps/zeek_log_ecs_categories.yaml
+++ b/logstash/maps/zeek_log_ecs_categories.yaml
@@ -1,6 +1,7 @@
 "bacnet": ["ot", "network"]
 "bacnet_discovery": ["ot", "network"]
 "bacnet_property": ["ot", "network"]
+"bsap": ["ot", "network"]
 "bsap_ip_header": ["ot", "network"]
 "bsap_ip_rdb": ["ot", "network"]
 "bsap_ip_unknown": ["ot", "network"]
@@ -19,15 +20,15 @@
 "dnp3_objects": ["ot", "network"]
 "dns": ["network"]
 "dpd": ["network"]
-"enip": ["ot", "network"]
-"ecat_registers": ["ot", "network"]
-"ecat_log_address": ["ot", "network"]
-"ecat_dev_info": ["ot", "network"]
 "ecat_aoe_info": ["ot", "network"]
-"ecat_coe_info": ["ot", "network"]
-"ecat_foe_info": ["ot", "network"]
-"ecat_soe_info": ["ot", "network"]
 "ecat_arp_info": ["ot", "network"]
+"ecat_coe_info": ["ot", "network"]
+"ecat_dev_info": ["ot", "network"]
+"ecat_foe_info": ["ot", "network"]
+"ecat_log_address": ["ot", "network"]
+"ecat_registers": ["ot", "network"]
+"ecat_soe_info": ["ot", "network"]
+"enip": ["ot", "network"]
 "files": ["file"]
 "ftp": ["file", "network"]
 "gquic": ["network"]
@@ -55,6 +56,7 @@
 "notice": ["intrusion_detection", "network"]
 "ntlm": ["authentication", "iam", "network"]
 "ntp": ["network"]
+"ocsp": ["file", "network"]
 "openvpn": ["network"]
 "pe": ["file"]
 "profinet": ["ot", "network"]
@@ -74,6 +76,8 @@
 "software": ["network"]
 "ssh": ["authentication", "network"]
 "ssl": ["network"]
+"stun": ["network"]
+"stun_nat": ["network"]
 "syslog": ["network"]
 "tds": ["database", "network"]
 "tds_rpc": ["database", "network"]
@@ -81,4 +85,4 @@
 "tunnel": ["network"]
 "weird": ["intrusion_detection", "network"]
 "wireguard": ["network"]
-"x509": ["file"]
+"x509": ["file", "network"]
