--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2519,6 +2519,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_fields_zeek_service_ocsp"
+             add_field => { "[zeek_cols][service]" => "X.509" } }
+
   } else if ([log_source] == "pe") {
     #############################################################################################################################
     # pe.log
