--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3340,6 +3340,13 @@ filter {
       }
     }
 
+    mutate {
+      id => "mutate_add_fields_zeek_stun"
+      add_field => {
+        "[zeek_cols][service]" => "stun"
+      }
+    }
+
   } else if ([log_source] == "stun_nat") {
     #############################################################################################################################
     # stun.log
@@ -3362,6 +3369,13 @@ filter {
         id => "ruby_zip_zeek_stun_nat"
         init => "$zeek_stun_nat_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'is_orig', 'wan_addr', 'wan_port', 'lan_addr' ]"
         code => "event.set('[zeek_cols]', $zeek_stun_nat_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_stun_nat"
+      add_field => {
+        "[zeek_cols][service]" => "stun"
       }
     }
 
