parsing stun action/result

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -419,6 +419,9 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][zeek_ssl_action]" } }
   }
 
+  if ([zeek_stun][method]) { mutate { id => "mutate_merge_normalize_zeek_stun_method"
+                                      merge => { "[zeek][action]" => "[zeek_stun][method]" } } }
+
   if ([zeek_tds][command]) { mutate { id => "mutate_merge_normalize_zeek_tds_command"
                              merge => { "[zeek][action]" => "[zeek_tds][command]" } } }
 
@@ -812,6 +815,28 @@ filter {
     if ([zeek_ssl][validation_status]) and ([zeek_ssl][validation_status] != 'ok') {
       mutate { id => "mutate_merge_field_zeek_ssl_result_validation_status"
                merge => { "[zeek][result]" => "[zeek_ssl][validation_status]" } }
+    }
+  }
+
+  if ([zeek_stun][class]) {
+    if ([zeek_stun][class] == "RESPONSE_SUCCESS") {
+      mutate { id => "mutate_add_field_zeek_stun_success"
+               add_field => { "[@metadata][zeek_stun_result]" => "Success" } }
+    } else if ([zeek_stun][class] == "RESPONSE_ERROR") {
+      if ([zeek_stun][attr_type] == "ERROR_CODE") and ([zeek_stun][attr_val]) {
+      mutate { id => "mutate_add_field_zeek_stun_error_attr_val"
+               add_field => { "[@metadata][zeek_stun_result]" => "%{[zeek_stun][attr_val]}" } }
+      } else {
+        mutate { id => "mutate_add_field_zeek_stun_error"
+                 add_field => { "[@metadata][zeek_stun_result]" => "Error" } }
+      }
+    } else if ([zeek_stun][class] != "REQUEST") {
+      mutate { id => "mutate_add_field_zeek_stun_result_other"
+               add_field => { "[@metadata][zeek_stun_result]" => "%{[zeek_stun][class]}" } }
+    }
+    if ([@metadata][zeek_stun_result]) {
+          mutate { id => "mutate_merge_zeek_stun_mapped_result"
+                   merge => { "[zeek][result]" => "[@metadata][zeek_stun_result]" } }
     }
   }
 
