--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -8,11 +8,11 @@ d-i clock-setup/ntp-server string 0.debian.pool.ntp.org
 
 d-i popularity-contest/participate boolean false
 
-localepurge localepurge/dontbothernew boolean false
+localepurge localepurge/dontbothernew boolean true
 localepurge localepurge/mandelete boolean true
 localepurge localepurge/none_selected boolean false
-localepurge localepurge/nopurge multiselect en, en_US, en_us.UTF-8, C.UTF-8
-localepurge localepurge/quickndirtycalc boolean true
+localepurge localepurge/nopurge multiselect en, en_US, en_US.UTF-8
+localepurge localepurge/quickndirtycalc boolean false
 localepurge localepurge/remove_no note
 localepurge localepurge/showfreedspace boolean false
 localepurge localepurge/use-dpkg-feature boolean false
