--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-25/16343171677.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-25/16343171677.desktop
@@ -7,3 +7,4 @@ Type=Application
 Icon=/usr/share/icons/hicolor/64x64/malcolm.png
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/malcolm-start.desktop
