--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-26/16343171699.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-26/16343171699.desktop
@@ -7,3 +7,4 @@ Type=Application
 Icon=redo.png
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/malcolm-restart.desktop
