--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-27/16343171722.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-27/16343171722.desktop
@@ -7,3 +7,4 @@ Type=Application
 Icon=exit.png
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/malcolm-stop.desktop
