--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-28/16343171811.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-28/16343171811.desktop
@@ -7,3 +7,4 @@ Type=Application
 Icon=terminal.png
 Categories=Network;
 StartupNotify=true
+X-XFCE-Source=file:///usr/share/applications/malcolm-logs.desktop
