--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-start.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-start.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Start Malcolm
-Exec=xfce4-terminal --command=/bin/bash\ -l\ -c\ "/usr/bin/python3\ ~/Malcolm/scripts/control.py\ --start"
+Exec=tilix -e /bin/bash -l -c "/usr/bin/python3 ~/Malcolm/scripts/control.py --start"
 Comment=Start Malcolm
 Terminal=false
 Type=Application
