--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-stop.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-stop.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Stop Malcolm
-Exec=xfce4-terminal --command=/bin/bash\ -l\ -c\ "/usr/bin/python3\ ~/Malcolm/scripts/control.py\ --stop"
+Exec=tilix -e /bin/bash -l -c "/usr/bin/python3 ~/Malcolm/scripts/control.py --stop"
 Comment=Stop Malcolm
 Terminal=false
 Type=Application
