--- a/malcolm-iso/config/includes.chroot/etc/lightdm/slick-greeter.conf
+++ b/malcolm-iso/config/includes.chroot/etc/lightdm/slick-greeter.conf
@@ -1,6 +1,6 @@
-[greeter]
+[Greeter]
 background=/usr/share/images/desktop-base/Malcolm_background.png
-user-background=false
-theme-name=Adwaita-dark
+draw-grid=false
+draw-user-backgrounds=false
 icon-theme-name=Adwaita
-panel-position=bottom
+theme-name=Adwaita-dark
