work in progress migrating buster->bullseye for Malcolm ISO (idaholab/Malcolm#57)

--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-18/16343117498.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-18/16343117498.desktop
@@ -5,7 +5,7 @@ Exec=/opt/firefox/firefox https://localhost:488/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=config-users.png
+Icon=config-users
 Categories=Network;
 StartupWMClass=Firefox
 StartupNotify=true
