--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-19/16343117417.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-19/16343117417.desktop
@@ -5,7 +5,7 @@ Exec=/opt/firefox/firefox https://localhost/name-map-ui/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=server.png
+Icon=server
 Categories=Network;
 StartupWMClass=Firefox
 StartupNotify=true
