--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-21/16343117306.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-21/16343117306.desktop
@@ -5,7 +5,7 @@ Exec=/opt/firefox/firefox https://localhost/upload/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=up.png
+Icon=up
 Categories=Network;
 StartupWMClass=Firefox
 StartupNotify=true
