--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-23/16343117599.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-23/16343117599.desktop
@@ -5,7 +5,7 @@ Exec=/opt/firefox/firefox https://localhost/cyberchef/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=applications-science.png
+Icon=applications-science
 Categories=Network;
 StartupWMClass=Firefox
 StartupNotify=true
