--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-26/16343171699.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-26/16343171699.desktop
@@ -4,7 +4,7 @@ Exec=tilix -e /bin/bash -l -c "/usr/bin/python3 ~/Malcolm/scripts/control.py --r
 Comment=Restart Malcolm
 Terminal=false
 Type=Application
-Icon=redo.png
+Icon=redo
 Categories=Network;
 StartupNotify=true
 X-XFCE-Source=file:///usr/share/applications/malcolm-restart.desktop
