--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-27/16343171722.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-27/16343171722.desktop
@@ -4,7 +4,7 @@ Exec=tilix -e /bin/bash -l -c "/usr/bin/python3 ~/Malcolm/scripts/control.py --s
 Comment=Stop Malcolm
 Terminal=false
 Type=Application
-Icon=exit.png
+Icon=exit
 Categories=Network;
 StartupNotify=true
 X-XFCE-Source=file:///usr/share/applications/malcolm-stop.desktop
