--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-28/16343171811.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-28/16343171811.desktop
@@ -4,7 +4,7 @@ Exec=tilix -e /bin/bash -l -c "/usr/bin/python3 ~/Malcolm/scripts/control.py --l
 Comment=Monitor the debug output of Malcolm containers
 Terminal=false
 Type=Application
-Icon=terminal.png
+Icon=terminal
 Categories=Network;
 StartupNotify=true
 X-XFCE-Source=file:///usr/share/applications/malcolm-logs.desktop
