--- a/sensor-iso/vagrant/Vagrantfile
+++ b/sensor-iso/vagrant/Vagrantfile
@@ -1,9 +1,5 @@
 # Copyright (c) 2021 Battelle Energy Alliance, LLC.  All rights reserved.
 
-unless Vagrant.has_plugin?("vagrant-reload")
-  raise 'vagrant-reload plugin is not installed!'
-end
-
 unless Vagrant.has_plugin?("vagrant-sshfs")
   raise 'vagrant-sshfs plugin is not installed!'
 end
@@ -18,7 +14,7 @@ end
 Vagrant.configure("2") do |config|
 
   config.vm.define "vagrant-hedgehog-build"
-  config.vm.box = "bento/debian-10"
+  config.vm.box = "bento/debian-11"
 
   config.vm.network "private_network", type: "dhcp"
 
@@ -42,32 +38,36 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-STEP1
     dpkg-reconfigure debconf -f noninteractive -p critical
     export DEBIAN_FRONTEND=noninteractive
-    apt-mark hold grub-pc
-    apt-get -qqy update
-    apt-get -y dist-upgrade
     sed -i "s/main/main contrib non-free/g" /etc/apt/sources.list
-    echo "deb http://httpredir.debian.org/debian/ buster-backports main contrib non-free" >> /etc/apt/sources.list
-    echo "deb-src http://httpredir.debian.org/debian/ buster-backports main contrib non-free" >> /etc/apt/sources.list
     apt-get -qqy update
-    export KERNEL_VERSION=$(apt-cache search linux-image-5.10 | grep -Pv -- '(-(rt|cloud)-amd64|amd64-(dbg|unsigned))' | sort -r --sort=version | awk '{print $1}' | head -n 1 | sed 's/^linux-image-//' | sed 's/-amd64$//')
-    apt-get -t buster-backports -y install \
-      linux-image-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-common \
-      dkms build-essential linux-kbuild-5.10 linux-compiler-gcc-8-x86 \
-      firmware-linux firmware-linux-nonfree firmware-misc-nonfree firmware-amd-graphics
-    ls /dev/disk/by-id/ata-* | grep -v '\\-part' | head -n 1 | xargs -r -l grub-install
-  STEP1
-  config.vm.provision :reload
-
-  config.vm.provision "shell", inline: <<-STEP2
-    export DEBIAN_FRONTEND=noninteractive
+    echo "deb http://httpredir.debian.org/debian/ bullseye-backports main contrib non-free" >> /etc/apt/sources.list
+    echo "deb-src http://httpredir.debian.org/debian/ bullseye-backports main contrib non-free" >> /etc/apt/sources.list
     apt-get -qqy update
-    apt-get -t buster-backports -y install \
-      rsync git live-build debootstrap xorriso squashfs-tools genisoimage pandoc imagemagick \
-      apt-transport-https ca-certificates curl gnupg2 software-properties-common
+    apt-get -t bullseye-backports -y install \
+      apt-transport-https \
+      bc \
+      build-essential \
+      ca-certificates \
+      curl \
+      debootstrap \
+      dkms \
+      gcc \
+      genisoimage \
+      git \
+      gnupg2 \
+      imagemagick \
+      jq \
+      linux-headers-amd64 \
+      live-build \
+      pandoc \
+      rsync \
+      software-properties-common \
+      squashfs-tools \
+      xorriso
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
     add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
     apt-get -qqy update
     apt-get -y install docker-ce docker-ce-cli containerd.io
     usermod -a -G docker vagrant
-  STEP2
+  STEP1
 end
