--- a/sensor-iso/vagrant/Vagrantfile
+++ b/sensor-iso/vagrant/Vagrantfile
@@ -63,6 +63,7 @@ Vagrant.configure("2") do |config|
       rsync \
       software-properties-common \
       squashfs-tools \
+      virt-what \
       xorriso
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
     add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
